cmake_minimum_required(VERSION 3.24.1)

option(BOOST "use boost" OFF)
if (BOOST)
    set(FETCH_BOOST "ON" CACHE STRING INTERNAL FORCE)
endif(BOOST)

option(TENSORFLOW "use tensorflow" OFF)
if (TENSORFLOW)
    set(FETCH_TENSORFLOW "ON" CACHE STRING INTERNAL FORCE)
endif(TENSORFLOW)

option(BEHAVIOR_TREE "use behavior tree" OFF)
if (BEHAVIOR_TREE)
    set(FETCH_BEHAVIOR_TREE_CPP "ON" CACHE STRING INTERNAL FORCE)
endif(BEHAVIOR_TREE)

option(CONCURRENTQUEUE "use concurrent queue" OFF)
if (CONCURRENTQUEUE)
    set(FETCH_CONCURRENTQUEUE "ON" CACHE STRING INTERNAL FORCE)
endif(CONCURRENTQUEUE)

option(OPENSSL "use openssl" OFF)
if (OPENSSL)
    set(FETCH_OPENSSL "ON" CACHE STRING INTERNAL FORCE)
endif(OPENSSL)

option(NLOHMANN_JSON "use nlohmann/json" OFF)
if (NLOHMANN_JSON)
    set(FETCH_NLOHMANN_JSON "ON" CACHE STRING INTERNAL FORCE)
endif(NLOHMANN_JSON)

option(RAPIDJSON "use tencent/rapidjson" OFF)
if (RAPIDJSON)
    set(FETCH_RAPIDJSON "ON" CACHE STRING INTERNAL FORCE)
endif(RAPIDJSON)

option(PUGIXML "use pugixml" OFF)
if (PUGIXML)
    set(FETCH_PUGIXML "ON" CACHE STRING INTERNAL FORCE)
endif(PUGIXML)

option(OPENCV "use opencv" OFF)
if (OPENCV)
    set(FETCH_OPENCV "ON" CACHE STRING INTERNAL FORCE)
endif(OPENCV)

option(LIBZMQ "use libzmq" OFF)
if (LIBZMQ)
    set(FETCH_LIBZMQ "ON" CACHE STRING INTERNAL FORCE)
endif(LIBZMQ)

option(ZMQPP "use zmqpp" OFF)
if (ZMQPP)
    set(FETCH_ZMQPP "ON" CACHE STRING INTERNAL FORCE)
endif(ZMQPP)

option(LOG4CPLUS "use log4cplus" OFF)
if (LOG4CPLUS)
    set(FETCH_LOG4CPLUS "ON" CACHE STRING INTERNAL FORCE)
endif(LOG4CPLUS)

option(LIBHARU "use pdf project" OFF)
if (LIBHARU)
    set(FETCH_LIBHARU "ON" CACHE STRING INTERNAL FORCE)
endif(LIBHARU)

option(HIREDIS "use redis client" OFF)
if (HIREDIS)
    set(FETCH_HIREDIS "ON" CACHE STRING INTERNAL FORCE)
endif(HIREDIS)